# emoji-logger

./: .gitattributes  Cargo.toml  LICENSE  README.md
src/: lib.rs
