[package]
name = "emoji-logger"
version = "0.1.0"
edition = "2021"
authors = ["Joel Wanko <wankojoelnathan@gmail.com>"]
license = "MIT"
description = "emoji logger is a simple logging library that uses emojis to represent log levels."
repository = "https://github.com/JOELNATHAN544/emoji-logger" # Optional but recommended
readme = "README.md" # Optional but recommended


[dependencies]
rand = "0.8"

